ensure fixed decision point information panel stays visible on screens with small height

--- a/turk-one/global.css
+++ b/turk-one/global.css
@@ -4,8 +4,11 @@ body {
 }
 
 @media screen and (min-width: 62em) {
+    /*this is used to fix the toolbar*/
     .md-fixed {
-        position: fixed;
+        position: fixed!IMPORTANT;
+        height: calc(100% - 70px)!IMPORTANT;
+        overflow-y: scroll!IMPORTANT;
     }
 }
 
